--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <title>Spot the Difference Game</title>
-    <link rel="stylesheet" type="text/css" href="https://nathanferrell.github.io/katiegame/style.css">
+    <link rel="stylesheet" type="text/css" href="https://nathanferrell.github.io/katiegame2/style.css">
 </head>
 <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     <div id="info"></div>
-    <script src="https://nathanferrell.github.io/katiegame/game.js"></script>
+    <script src="https://nathanferrell.github.io/katiegame2/game.js"></script>
 </body>
 </html>
