--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div id="questionnaireSection">
-    <p>You will be asked to take a quick survey about your sleep followed by a spot-the-difference task. Once you begin, the image will be revealed and a stopwatch will begin, the time will stop when you’ve found all the differences, or once you hit the “end task” button. There are 23 differences in the image, please click on the differences in the bottom image. Only click the end task button if you are sure you cannot find anymore differences. Please only complete this survey one time.</p>
+    <p>You will be asked to take a quick survey about your sleep followed by a spot-the-difference task. Your results will be anonymous. Once you begin, the image will be revealed and a stopwatch will begin, the time will stop when you’ve found all the differences, or once you hit the “end task” button. There are 23 differences in the image, please click on the differences in the bottom image. Only click the end task button if you are sure you cannot find anymore differences. Please only complete this survey one time.</p>
     <form id="questionnaireForm">
         <label for="age">Age:</label>
         <input type="text" id="age" name="age">
