--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="https://nathanferrell.github.io/katiegame2/style.css">
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js";
+        import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore.js";
         import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-analytics.js";
         const firebaseConfig = {
             apiKey: "AIzaSyDunYYvMbCGWlDkknZSBK0I-Hv5DkoesC4",
@@ -17,6 +18,10 @@
         };
         const app = initializeApp(firebaseConfig);
         const analytics = getAnalytics(app);
+        const db = getFirestore(app);
+    
+    // Expose db to other scripts
+        window.db = db;
     </script>
 </head>
 <body>
