--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Spot the Difference Game</title>
     <link rel="stylesheet" type="text/css" href="https://nathanferrell.github.io/katiegame2/style.css">
     <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js";
-        import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore.js";
+        import { initializeApp } from "firebase/app";
+        import { getFirestore, collection, addDoc } from "firebase/firestore";
         import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-analytics.js";
         const firebaseConfig = {
             apiKey: "AIzaSyDunYYvMbCGWlDkknZSBK0I-Hv5DkoesC4",
